syntax = "proto3";

package infraboard.keyauth.mconf;
option go_package = "github.com/infraboard/keyauth/app/mconf";

import "app/mconf/pb/request.proto";
import "app/mconf/pb/conf.proto";

// ConfigService 服务
service ConfigService {
	rpc CreateGroup(CreateGroupRequest) returns(Group);
	rpc QueryGroup(QueryGroupRequest) returns(GroupSet);
	rpc DeleteGroup(DeleteGroupRequest) returns(Group);
	rpc QueryItem(QueryItemRequest) returns(ItemSet);
	rpc AddItemToGroup(AddItemToGroupRequest) returns(ItemSet);
	rpc RemoveItemFromGroup(RemoveItemFromGroupRequest) returns(ItemSet);
}