syntax = "proto3";

package infraboard.keyauth.micro;
option go_package = "github.com/infraboard/keyauth/app/micro";

import "app/micro/pb/enum.proto";

// Micro is service provider
message Micro {
    // 微服务ID
    // @gotags: bson:"_id" json:"id"
    string id = 1;
    // 服务所属域
    // @gotags: bson:"domain" json:"domain"
    string domain = 2;
    // 创建人
    // @gotags: bson:"creater" json:"creater"
    string creater = 3;
    // 创建的时间
    // @gotags: bson:"create_at" json:"create_at,omitempty"
    int64 create_at = 4;
    // 更新时间
    // @gotags: bson:"update_at" json:"update_at,omitempty"
    int64 update_at = 5;
    // 服务账号
    // @gotags: bson:"account" json:"account"
    string account = 6;
    // 服务客户端ID
    // @gotags: bson:"client_id" json:"client_id"
    string client_id = 7;
    // 服务客户端凭证
    // @gotags: bson:"client_secret" json:"client_secret"
    string client_secret = 8;
    // 是否启动客户端
    // @gotags: bson:"client_enabled" json:"client_enabled"
    bool client_enabled = 9;
    // 客户端刷新时间
    // @gotags: bson:"client_refresh_at" json:"client_refresh_at"
    int64 client_refresh_at = 10;
    // 是否启用该服务
    // @gotags: bson:"enabled" json:"enabled"
    bool enabled = 11;
    // 服务类型
    // @gotags: bson:"type" json:"type"
    Type type = 12;
    // 名称
    // @gotags: bson:"name" json:"name"
    string name = 13;
    // 服务标签
    // @gotags: bson:"label" json:"label"
    map<string, string> label = 14;
    // 描述信息
    // @gotags: bson:"description" json:"description,omitempty"
    string description = 15;
}

message Set {
    // @gotags: bson:"total" json:"total"
    int64 total = 1;
    // @gotags: bson:"items" json:"items"
    repeated Micro items = 2;
}